--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,30 @@
-.grid {
+.grid1 {
+    margin-left: -10px;
+    margin-top: -10px;
+    margin-right: -10px;
     max-width: auto;
     display: grid;
-    grid-template-rows: 30px 50px;
+    grid-template-columns: 100px 200px;
+    background-color:blueviolet;
+}
+
+.webhead {
+    font-size: 110%;
+    margin-left: 10px;
+    color: whitesmoke;
+    font-family: 'Mukta', sans-serif;
 }
 
 .bell {
-    width: 50px;
-    height: 50px;
+    margin-left: 25px;
+    margin-top: 10px;
+    width: 35px;
+    height: 35px;
+    fill: whitesmoke;
+}
+
+.user {
+    /*margin-left: 60px;*/
+    height: 35px;
+    width: 35px;
 }
