--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
+/*PROFILE BAR*/
+
 .grid1 {
     margin-left: -10px;
     margin-top: -10px;
     margin-right: -10px;
     max-width: auto;
     display: grid;
-    grid-template-columns: 100px 200px;
+    /*grid-template-columns: 100px 200px;*/
     background-color:blueviolet;
 }
 
@@ -23,8 +25,70 @@
     fill: whitesmoke;
 }
 
+.fence {
+    display: flex;
+    flex-direction: row;
+}
+
 .user {
-    /*margin-left: 60px;*/
-    height: 35px;
-    width: 35px;
+    margin-left: 75px;
+    margin-top: 7px;
+    border-radius: 50%;
+    height: 40px;
+    width: 45px;
+}
+
+.username {
+    font-size: 100%;
+    color: whitesmoke;
+    font-family: 'Mukta', sans-serif;
+    margin-left: 15px;
+}
+
+/*NAVIGATION BAR*/
+
+.navbar {
+    display: grade;
+    background-color: #7575a3;
+    margin-left: -10px;
+    margin-right: -10px;
+    padding-left: 20px;
+    padding-top: 7px;
+    padding-right: 20px;
+    padding-bottom: 7px;
+    max-width: auto;
+}
+
+.home {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    fill: whitesmoke;
+}
+
+.graph {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    fill: whitesmoke;
+}
+
+.people {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    fill: whitesmoke;
+}
+
+.settings {
+    width: 40px;
+    height: 40px;
+    margin-left: 10px;
+    fill: whitesmoke;
+}
+
+.widgetwrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
