--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
-/*PROFILE BAR*/
 
+/*mobile (320px), tablet (768px) and desktop (1024px)*/
 .grid1 {
     margin-left: -10px;
     margin-top: -10px;
@@ -8,6 +8,7 @@
     display: grid;
     /*grid-template-columns: 100px 200px;*/
     background-color:blueviolet;
+    grid-area: header;
 }
 
 .webhead {
@@ -57,6 +58,7 @@
     padding-right: 20px;
     padding-bottom: 7px;
     max-width: auto;
+    grid-area: navigation;
 }
 
 
@@ -92,9 +94,47 @@
 
 .grid2 {
     display: grid;
+    grid-area: main;
+    grid-template-columns: 100%;
     grid-template-rows: auto;
+    grid-template-areas: 
+     "header" 
+     "navigation"
+     "main";
 }
 
-.main-header {
+
+.widget-container-full, .widget-container-half {
+    width: 95vw;
+}
+
+@media (min-width: 768px) {
+    .grid2 {
+        grid-template-columns: 55px 1fr;
+        grid-template-columns: 50%;/*syntax check*/
+        grid-template-areas:
+        "header header"
+        "navigation main";
+    }
+
+    .traffic, .social {
+        grid-column: 1 / span 2;
+    }
+
+    .daily, .members, .message {
+        grid-column: 1 / span 1;
+    }
+
+    .mobile, .activity, .settings {
+        grid-column: 2 / span 1;
+    }
+
+    .widget-container-full {
+        width: 90vw;
+    }
+
+    .widget-container-half {
+        width: 45vw;
+    }
 
 }
