--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-
+/*HEADER*/
 /*mobile (320px), tablet (768px) and desktop (1024px)*/
 .grid1 {
     margin-left: -10px;
@@ -12,17 +12,17 @@
 }
 
 .webhead {
-    font-size: 110%;
+    font-size: 180%;
     margin-left: 10px;
     color: whitesmoke;
     font-family: 'Mukta', sans-serif;
 }
 
 .bell {
-    margin-left: 25px;
-    margin-top: 10px;
+    margin-left: 15px;
+    margin-top: 21px;
     width: 35px;
-    height: 35px;
+    height: 45px;
     fill: whitesmoke;
 }
 
@@ -32,18 +32,19 @@
 }
 
 .user {
-    margin-left: 75px;
-    margin-top: 7px;
+    margin-left: 25px;
+    margin-top: 18px;
     border-radius: 50%;
-    height: 40px;
-    width: 45px;
+    height: 50px;
+    width: 55px;
 }
 
 .username {
     font-size: 100%;
     color: whitesmoke;
     font-family: 'Mukta', sans-serif;
-    margin-left: 15px;
+    margin-left: 12px;
+    margin-top: 29px;
 }
 
 /*NAVIGATION BAR*/
