--- a/css/toggle-switch.css
+++ b/css/toggle-switch.css
@@ -167,7 +167,7 @@
       z-index: 2;
       display: block;
       float: left;
-      padding: 0 0.5rem;
+      padding: 0 0.5em;
       margin: 0;
       text-align: center; }
     .switch-toggle a {
@@ -266,18 +266,18 @@
   .switch-ios.switch-light a {
     left: 0;
     top: 0;
-    width: 2rem;
-    height: 2rem;
+    width: 2em;
+    height: 2em;
     background-color: #fff;
     border-radius: 100%;
-    border: 0.25rem solid #D8D9DB;
+    border: 0.25em solid #D8D9DB;
     transition: all .2s ease-out; }
   .switch-ios.switch-light > span {
     display: block;
     width: 100%;
-    height: 2rem;
+    height: 2em;
     background-color: #D8D9DB;
-    border-radius: 1.75rem;
+    border-radius: 1.75em;
     transition: all .4s ease-out; }
   .switch-ios.switch-light > span span {
     position: absolute;
@@ -285,18 +285,18 @@
     left: 0;
     width: 100%;
     opacity: 0;
-    line-height: 1.875rem;
+    line-height: 1.875em;
     vertical-align: middle;
     transition: all .2s ease-out; }
     .switch-ios.switch-light > span span:first-of-type {
       opacity: 1;
-      padding-left: 1.875rem; }
+      padding-left: 1.875em; }
     .switch-ios.switch-light > span span:last-of-type {
-      padding-right: 1.875rem; }
+      padding-right: 1.875em; }
   .switch-ios.switch-light input:checked ~ span a {
     left: 100%;
     border-color: #4BD865;
-    margin-left: -2rem; }
+    margin-left: -2em; }
   .switch-ios.switch-light input:checked ~ span {
     border-color: #4BD865;
     box-shadow: inset 0 0 0 30px #4BD865; }
@@ -311,8 +311,8 @@
     box-shadow: inset rgba(0, 0, 0, 0.1) 0 1px 0; }
     .switch-ios.switch-toggle a {
       background-color: #4BD865;
-      border: 0.125rem solid #D8D9DB;
-      border-radius: 1.75rem;
+      border: 0.125em solid #D8D9DB;
+      border-radius: 1.75em;
       transition: all 0.12s ease-out; }
     .switch-ios.switch-toggle label {
       height: 2.4em;
@@ -340,7 +340,7 @@
   .switch-holo > span span,
   .switch-holo label {
     font-size: 85%;
-    line-height: 2.15625rem; }
+    line-height: 2.15625em; }
   .switch-holo a {
     background-color: #666;
     border-radius: 1px;
@@ -358,12 +358,12 @@
   /* switch-light
  */
   .switch-light.switch-material a {
-    top: -0.1875rem;
-    width: 1.75rem;
-    height: 1.75rem;
+    top: -0.1875em;
+    width: 1.75em;
+    height: 1.75em;
     border-radius: 50%;
     background: #fafafa;
-    box-shadow: 0 0.125rem 0.125rem 0 rgba(0, 0, 0, 0.14), 0 0.1875rem 0.125rem -0.125rem rgba(0, 0, 0, 0.2), 0 0.125rem 0.25rem 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.14), 0 0.1875em 0.125em -0.125em rgba(0, 0, 0, 0.2), 0 0.125em 0.25em 0 rgba(0, 0, 0, 0.12);
     transition: right 0.28s cubic-bezier(0.4, 0, 0.2, 1); }
   .switch-material.switch-light {
     overflow: visible; }
@@ -374,11 +374,11 @@
   .switch-material.switch-light > span {
     overflow: visible;
     position: relative;
-    top: 0.1875rem;
-    width: 3.25rem;
-    height: 1.5rem;
+    top: 0.1875em;
+    width: 3.25em;
+    height: 1.5em;
     min-height: auto;
-    border-radius: 1rem;
+    border-radius: 1em;
     background: rgba(0, 0, 0, 0.26); }
   .switch-material.switch-light span span {
     position: absolute;
@@ -386,7 +386,7 @@
   .switch-material.switch-light input:checked ~ span a {
     right: 0;
     background: #3f51b5;
-    box-shadow: 0 0.1875rem 0.25rem 0 rgba(0, 0, 0, 0.14), 0 0.1875rem 0.1875rem -0.125rem rgba(0, 0, 0, 0.2), 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.12); }
+    box-shadow: 0 0.1875em 0.25em 0 rgba(0, 0, 0, 0.14), 0 0.1875em 0.1875em -0.125em rgba(0, 0, 0, 0.2), 0 0.0625em 0.375em 0 rgba(0, 0, 0, 0.12); }
   .switch-material.switch-light input:checked ~ span {
     background: rgba(63, 81, 181, 0.5); }
   /* switch-toggle
@@ -399,9 +399,9 @@
       display: table; }
   .switch-toggle.switch-material a {
     top: 48%;
-    width: 0.375rem !important;
-    height: 0.375rem;
-    margin-left: 0.25rem;
+    width: 0.375em !important;
+    height: 0.375em;
+    margin-left: 0.25em;
     background: #3f51b5;
     border-radius: 100%;
     transform: translateY(-50%);
@@ -415,10 +415,10 @@
     top: 48%;
     left: 0;
     display: block;
-    width: 0.875rem;
-    height: 0.875rem;
+    width: 0.875em;
+    height: 0.875em;
     border-radius: 100%;
-    border: 0.125rem solid rgba(0, 0, 0, 0.54);
+    border: 0.125em solid rgba(0, 0, 0, 0.54);
     transform: translateY(-50%); }
   .switch-toggle.switch-material input:checked + label:before {
     border-color: #3f51b5; }
@@ -433,24 +433,24 @@
     left: 0;
     z-index: 3;
     display: block;
-    width: 4rem;
-    height: 4rem;
+    width: 4em;
+    height: 4em;
     border-radius: 100%;
     background: #3f51b5;
     opacity: .4;
-    margin-left: -1.25rem;
-    margin-top: -1.25rem;
+    margin-left: -1.25em;
+    margin-top: -1.25em;
     transform: scale(0);
     transition: opacity .4s ease-in; }
   .switch-light.switch-material > span:after {
     left: auto;
     right: 0;
     margin-left: 0;
-    margin-right: -1.25rem; }
+    margin-right: -1.25em; }
   .switch-toggle.switch-material label:after {
-    width: 3.25rem;
-    height: 3.25rem;
-    margin-top: -0.75rem; }
+    width: 3.25em;
+    height: 3.25em;
+    margin-top: -0.75em; }
   @keyframes materialRipple {
     0% {
       transform: scale(0); }
@@ -479,7 +479,7 @@
 /* Bugfix for older Webkit, including mobile Webkit. Adapted from
  * http://css-tricks.com/webkit-sibling-bug/
  */
-@media only screen and (-webkit-max-device-pixel-ratio: 2) and (max-device-width: 80rem) {
+@media only screen and (-webkit-max-device-pixel-ratio: 2) and (max-device-width: 80em) {
   .switch-light,
   .switch-toggle {
     -webkit-animation: webkitSiblingBugfix infinite 1s; } }
@@ -489,5 +489,3 @@
     -webkit-transform: translate3d(0, 0, 0); }
   to {
     -webkit-transform: translate3d(0, 0, 0); } }
-
-/*# sourceMappingURL=toggle-switch-rem.css.map */
