--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,26 @@ header {
     margin-top: -10px;
     margin-right: -10px;
     max-width: auto;
-    /*display: grid;
-    grid-template-columns: 100px 200px;*/
     background-color:blueviolet;
-    /*grid-area: header;*/
+    grid-area: header;
+}
+
+nav {
+    grid-area: navigation;
+}
+
+main {
+    grid-area: main;
+}
+
+body {
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+    grid-template-areas: 
+      "header"
+      "navigation"
+      "main";
 }
 
 .webhead {
@@ -314,10 +330,36 @@ button {
     display: inline-block;
 }
 
-.gridx {
-    display: grid;
-}
 
 @media (min-width: 768px) {
+    body {
+      grid-template-columns: 55px 1fr;
+      grid-template-areas: 
+        "header header"
+        "navigation main";
+    }
 
+    main {
+        grid-template-columns: 50%;
+    }
+
+    .traffic, .networking {
+        grid-column: 1 / span 2;
+    }
+
+    .daily, .members, .message {
+        grid-column: 1 / span 1;
+    }
+
+    .mobile, .activity, .settings {
+        grid-column: 2 / span 1;
+    }
+
+    .widget-container-full {
+        width: 90vw;
+    }
+
+    .widget-container-half {
+        width: 45vw;
+    }
 }
